# tectonic

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
configs/: hosts.yml  pull.yaml  repos.yaml  services.yaml  sync.yaml  syncignore  tools.yaml  urls.yaml
configs/preset/: paper-sync.yaml
configs/services/: strata-server.yaml  strata.yaml  tectonic.yaml
docs/: architecture.md  naming.md  syncthing.md
docs/hardware/: campbell.md  hardware.md
dotfiles/config/: starship.toml
home/: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  dot_bash_profile.tmpl  run_onchange_after_setup-claude-mcp.sh
home/.chezmoidata/: hosts.yaml
home/dot_claude/: CLAUDE.md  mcp.json  settings.json
home/dot_config/: starship.toml
home/dot_config/git/: config.tmpl
home/dot_config/zsh/: dot_zprofile  dot_zprofile.tmpl  dot_zshenv  dot_zshenv.tmpl  dot_zshrc
home/dot_ssh/: config.tmpl  private_authorized_keys.tmpl
src/lxs/: cli.py  config.py
src/lxs/commands/: dotfiles.py  install.py  plugins.py
src/lxs/core/: fs.py  process.py
src/lxs/modules/: shell.py
src/tectonic/: __main__.py  cli.py  config.py
src/tectonic/base/: __init__.py  configs.py
src/tectonic/cli/: __init__.py  apply.py  deploy.py  dotfiles.py  packages.py  preset.py  pull.py  repos.py  services.py  sync.py  tools.py
src/tectonic/commands/: dotfiles.py  install.py  plugins.py  services.py
src/tectonic/core/: distro.py  fs.py  host.py  process.py  repos.py  service.py  ui.py  (+2 more)
tests/: conftest.py  test_cli.py  test_config.py  test_dotfiles.py  test_fs.py  test_host.py  test_services.py
(+20 files in other folders)
